<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spellCastingHeader"
        android:orientation="horizontal"
        android:background="@drawable/deep_background">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1">

            <EditText
                style="@style/SpellCastingHeaderEditText"
                android:id="@+id/spellCastingAbility"
                android:layout_gravity="center_horizontal"/>

            <TextView
                style="@style/SpellCastingHeaderLabel"
                android:id="@+id/spellCastingAbilityLabel"
                android:text="@string/label_spellcasting_ability"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <EditText
                style="@style/SpellCastingHeaderEditText"
                android:id="@+id/spellSaveDC"
                android:layout_gravity="center_horizontal"/>

            <TextView
                style="@style/SpellCastingHeaderLabel"
                android:id="@+id/spellSaveDCLabel"
                android:text="@string/label_spell_save_dc"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <EditText
                style="@style/SpellCastingHeaderEditText"
                android:id="@+id/spellAttackBonus"
                android:layout_gravity="center_horizontal"/>

            <TextView
                style="@style/SpellCastingHeaderLabel"
                android:id="@+id/spellAttackBonusLabel"
                android:text="@string/label_spell_attack_bonus"/>

        </LinearLayout>
    </LinearLayout>

    <TextView
        style="@style/BaseTextView"
        android:id="@+id/spellsListLabel"
        android:text="@string/label_spells_known"
        android:layout_marginTop="@dimen/content_margin"
        android:layout_below="@+id/spellCastingHeader"
        android:layout_centerHorizontal="true"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/spellSlotsExpListView"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_below="@+id/spellsListLabel"
        />

</RelativeLayout>

