<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:descendantFocusability="beforeDescendants">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/coinLayout"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1">

                <EditText
                    style="@style/CoinEditText"
                    android:id="@+id/copper"
                    android:background="@drawable/rectangle"/>

                <TextView
                    style="@style/CoinLabel"
                    android:id="@+id/cpLabel"
                    android:text="@string/label_copper"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1">

                <EditText
                    style="@style/CoinEditText"
                    android:id="@+id/silver"
                    android:background="@drawable/rectangle"/>

                <TextView
                    style="@style/CoinLabel"
                    android:id="@+id/spLabel"
                    android:text="@string/label_silver"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1">

                <EditText
                    style="@style/CoinEditText"
                    android:id="@+id/electrum"
                    android:background="@drawable/rectangle"/>

                <TextView
                    style="@style/CoinLabel"
                    android:id="@+id/epLabel"
                    android:text="@string/label_electrum"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1">

                <EditText
                    style="@style/CoinEditText"
                    android:id="@+id/gold"
                    android:background="@drawable/rectangle"/>

                <TextView
                    style="@style/CoinLabel"
                    android:id="@+id/gpLabel"
                    android:text="@string/label_gold"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1">

                <EditText
                    style="@style/CoinEditText"
                    android:id="@+id/platinum"
                    android:background="@drawable/rectangle"/>

                <TextView
                    style="@style/CoinLabel"
                    android:id="@+id/ppLabel"
                    android:text="@string/label_platinum"/>

            </LinearLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle"
            android:elevation="4dp"
            android:layout_margin="4dp"
            android:layout_below="@+id/coinLayout"
            android:id="@+id/equipmentLayout">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/equipment"
                android:inputType="textMultiLine|textCapSentences"
                android:minLines="4"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_equipment"
                android:layout_below="@+id/equipment"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle"
            android:elevation="4dp"
            android:layout_margin="4dp"
            android:layout_below="@+id/equipmentLayout"
            android:id="@+id/treasureLayout">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/treasure"
                android:inputType="textMultiLine|textCapSentences"
                android:minLines="4"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_treasure"
                android:layout_below="@+id/treasure"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>

    </RelativeLayout>

</android.support.v4.widget.NestedScrollView>
