<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp">

    <RelativeLayout
        android:id="@+id/charactersheet_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/combatStatsLayout"
            android:orientation="horizontal"
            android:background="@drawable/deep_background">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <EditText
                    style="@style/CombatStatsTopRowEditText"
                    android:id="@+id/armorClass"
                    android:layout_gravity="center_horizontal"/>

                <TextView
                    style="@style/CombatStatsTopRowLabel"
                    android:id="@+id/armorClassLabel"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/label_armor_class"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <EditText
                    style="@style/CombatStatsTopRowEditText"
                    android:id="@+id/initiative"
                    android:layout_gravity="center_horizontal"/>

                <TextView
                    style="@style/CombatStatsTopRowLabel"
                    android:id="@+id/initiativeLabel"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/label_initiative"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <EditText
                    style="@style/CombatStatsTopRowEditText"
                    android:id="@+id/speed"
                    android:layout_gravity="center_horizontal"/>

                <TextView
                    style="@style/CombatStatsTopRowLabel"
                    android:id="@+id/speedLabel"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/label_speed"/>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/currentHitPointsLayout"
            android:layout_below="@+id/combatStatsLayout">

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/temporaryHitPointsLayout"
            android:layout_below="@+id/combatStatsLayout">

        </LinearLayout>

        <View
            android:id="@+id/strut"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="invisible"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/hitDiceLayout"
            android:layout_toLeftOf="@+id/strut"
            android:layout_below="@+id/temporaryHitPointsLayout">

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/deathSavesLayout"
            android:layout_toRightOf="@+id/strut"
            android:layout_below="@+id/temporaryHitPointsLayout">

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/attacksAndSpellcastingLayout"
            android:layout_below="@+id/combatStatsLayout">

            <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/attacksAndSpells">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:layout_margin="4dp"
                    android:text="NAME"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:layout_margin="4dp"
                    android:gravity="center_horizontal"
                    android:text="ATK BONUS"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:layout_margin="4dp"
                    android:gravity="right"
                    android:text="DAMAGE/TYPE"/>

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>
</ScrollView>
